# Chomre

./: .gitignore  README.txt  chom.example.json  pyproject.toml
chomre/interpreter/: chom.py  chomre.py  chonkey.py  cst.py
cst_examples/: chom.example.json  chom.example2.json
docs/: how-it-works.txt
