[tool.poetry]
name = "chomre"
version = "0.1.0"
description = "Chomre is an interpreted code generation language written in python."
authors = ["Josh Mogil"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
